   TermAttribute, OffsetAttribute, PositionIncrementAttribute, 
   PayloadAttribute, TypeAttribute and FlagsAttribute. The new API
   is much more flexible; it allows to combine the Attributes arbitrarily 
   and also to define custom Attributes. The new API has the same performance
   as the old next(Token) approach. (Michael Busch)

Bug fixes

1. LUCENE-1415: MultiPhraseQuery has incorrect hashCode() and equals()
   implementation - Leads to Solr Cache misses. 
   (Todd Feak, Mark Miller via yonik)

2. LUCENE-1452: Fixed silent data-loss case whereby binary fields are
   truncated to 0 bytes during merging if the segments being merged
   are non-congruent (same field name maps to different field
   numbers).  This bug was introduced with LUCENE-1219.  (Andrzej
   Bialecki via Mike McCandless).

New features

 1. LUCENE-1411: Added expert API to open an IndexWriter on a prior
    commit, obtained from IndexReader.listCommits.  This makes it
    possible to rollback changes to an index even after you've closed
    the IndexWriter that made the changes, assuming you are using an
    IndexDeletionPolicy that keeps past commits around.  This is useful
    when building transactional support on top of Lucene.  (Mike
    McCandless)

 2. LUCENE-1382: Add an optional arbitrary String "commitUserData" to
    IndexWriter.commit(), which is stored in the segments file and is
    then retrievable via IndexReader.getCommitUserData instance and
    static methods.  (Shalin Shekhar Mangar via Mike McCandless)

 3. LUCENE-1406: Added Arabic analyzer.  (Robert Muir via Grant Ingersoll)

 4. LUCENE-1420: Similarity now has a computeNorm method that allows
    custom Similarity classes to override how norm is computed.  It's
    provided a FieldInvertState instance that contains details from
    inverting the field.  The default impl is boost *
    lengthNorm(numTerms), to be backwards compatible.  Also added
    {set/get}DiscountOverlaps to DefaultSimilarity, to control whether