@@ -854,6 +854,107 @@ return|return
 literal|true
 return|;
 block|}
+comment|/** Moves iterator to the next doc and returns its id;       returns -1 when this iterator is exhausted. */
+DECL|method|nextDoc
+specifier|public
+name|int
+name|nextDoc
+parameter_list|()
+block|{
+if|if
+condition|(
+name|indexArray
+operator|==
+literal|0
+condition|)
+block|{
+if|if
+condition|(
+name|word
+operator|!=
+literal|0
+condition|)
+block|{
+name|word
+operator|>>>=
+literal|8
+expr_stmt|;
+name|wordShift
+operator|+=
+literal|8
+expr_stmt|;
+block|}
+while|while
+condition|(
+name|word
+operator|==
+literal|0
+condition|)
+block|{
+if|if
+condition|(
+operator|++
+name|i
+operator|>=
+name|words
+condition|)
+block|{
+return|return
+name|curDocId
+operator|=
+operator|-
+literal|1
+return|;
+block|}
+name|word
+operator|=
+name|arr
+index|[
+name|i
+index|]
+expr_stmt|;
+name|wordShift
+operator|=
+operator|-
+literal|1
+expr_stmt|;
+comment|// loop invariant code motion should move this
+block|}
+comment|// after the first time, should I go with a linear search, or
+comment|// stick with the binary search in shift?
+name|shift
+argument_list|()
+expr_stmt|;
+block|}
+name|int
+name|bitIndex
+init|=
+operator|(
+name|indexArray
+operator|&
+literal|0x0f
+operator|)
+operator|+
+name|wordShift
+decl_stmt|;
+name|indexArray
+operator|>>>=
+literal|4
+expr_stmt|;
+comment|// should i<<6 be cached as a separate variable?
+comment|// it would only save one cycle in the best circumstances.
+return|return
+name|curDocId
+operator|=
+operator|(
+name|i
+operator|<<
+literal|6
+operator|)
+operator|+
+name|bitIndex
+return|;
+block|}
 DECL|method|skipTo
 specifier|public
 name|boolean
@@ -993,6 +1094,142 @@ name|bitIndex
 expr_stmt|;
 return|return
 literal|true
+return|;
+block|}
+comment|/** Behaves like {@link #skipTo(int)} and returns the docId the iterator    *  skipped to; returns -1 if no valid document could be skipped to. */
+DECL|method|next
+specifier|public
+name|int
+name|next
+parameter_list|(
+name|int
+name|fromIndex
+parameter_list|)
+block|{
+name|indexArray
+operator|=
+literal|0
+expr_stmt|;
+name|i
+operator|=
+name|fromIndex
+operator|>>
+literal|6
+expr_stmt|;
+if|if
+condition|(
+name|i
+operator|>=
+name|words
+condition|)
+block|{
+name|word
+operator|=
+literal|0
+expr_stmt|;
+comment|// setup so next() will also return -1
+return|return
+name|curDocId
+operator|=
+operator|-
+literal|1
+return|;
+block|}
+name|wordShift
+operator|=
+name|fromIndex
+operator|&
+literal|0x3f
+expr_stmt|;
+name|word
+operator|=
+name|arr
+index|[
+name|i
+index|]
+operator|>>>
+name|wordShift
+expr_stmt|;
+if|if
+condition|(
+name|word
+operator|!=
+literal|0
+condition|)
+block|{
+name|wordShift
+operator|--
+expr_stmt|;
+comment|// compensate for 1 based arrIndex
+block|}
+else|else
+block|{
+while|while
+condition|(
+name|word
+operator|==
+literal|0
+condition|)
+block|{
+if|if
+condition|(
+operator|++
+name|i
+operator|>=
+name|words
+condition|)
+block|{
+return|return
+name|curDocId
+operator|=
+operator|-
+literal|1
+return|;
+block|}
+name|word
+operator|=
+name|arr
+index|[
+name|i
+index|]
+expr_stmt|;
+block|}
+name|wordShift
+operator|=
+operator|-
+literal|1
+expr_stmt|;
+block|}
+name|shift
+argument_list|()
+expr_stmt|;
+name|int
+name|bitIndex
+init|=
+operator|(
+name|indexArray
+operator|&
+literal|0x0f
+operator|)
+operator|+
+name|wordShift
+decl_stmt|;
+name|indexArray
+operator|>>>=
+literal|4
+expr_stmt|;
+comment|// should i<<6 be cached as a separate variable?
+comment|// it would only save one cycle in the best circumstances.
+return|return
+name|curDocId
+operator|=
+operator|(
+name|i
+operator|<<
+literal|6
+operator|)
+operator|+
+name|bitIndex
 return|;
 block|}
 DECL|method|doc
