@@ -199,10 +199,51 @@ literal|0
 condition|)
 do|;
 block|}
-comment|// test interleaving different BitSetIterator.next()
+comment|// test interleaving different OpenBitSetIterator.next()/skipTo()
 DECL|method|doIterate
 name|void
 name|doIterate
+parameter_list|(
+name|BitSet
+name|a
+parameter_list|,
+name|OpenBitSet
+name|b
+parameter_list|,
+name|int
+name|mode
+parameter_list|)
+block|{
+if|if
+condition|(
+name|mode
+operator|==
+literal|1
+condition|)
+name|doIterate1
+argument_list|(
+name|a
+argument_list|,
+name|b
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|mode
+operator|==
+literal|2
+condition|)
+name|doIterate2
+argument_list|(
+name|a
+argument_list|,
+name|b
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|doIterate1
+name|void
+name|doIterate1
 parameter_list|(
 name|BitSet
 name|a
@@ -289,6 +330,92 @@ literal|0
 condition|)
 do|;
 block|}
+DECL|method|doIterate2
+name|void
+name|doIterate2
+parameter_list|(
+name|BitSet
+name|a
+parameter_list|,
+name|OpenBitSet
+name|b
+parameter_list|)
+block|{
+name|int
+name|aa
+init|=
+operator|-
+literal|1
+decl_stmt|,
+name|bb
+init|=
+operator|-
+literal|1
+decl_stmt|;
+name|OpenBitSetIterator
+name|iterator
+init|=
+operator|new
+name|OpenBitSetIterator
+argument_list|(
+name|b
+argument_list|)
+decl_stmt|;
+do|do
+block|{
+name|aa
+operator|=
+name|a
+operator|.
+name|nextSetBit
+argument_list|(
+name|aa
+operator|+
+literal|1
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|rand
+operator|.
+name|nextBoolean
+argument_list|()
+condition|)
+name|bb
+operator|=
+name|iterator
+operator|.
+name|nextDoc
+argument_list|()
+expr_stmt|;
+else|else
+name|bb
+operator|=
+name|iterator
+operator|.
+name|next
+argument_list|(
+name|bb
+operator|+
+literal|1
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|aa
+argument_list|,
+name|bb
+argument_list|)
+expr_stmt|;
+block|}
+do|while
+condition|(
+name|aa
+operator|>=
+literal|0
+condition|)
+do|;
+block|}
 DECL|method|doRandomSets
 name|void
 name|doRandomSets
@@ -298,6 +425,9 @@ name|maxSize
 parameter_list|,
 name|int
 name|iter
+parameter_list|,
+name|int
+name|mode
 parameter_list|)
 block|{
 name|BitSet
@@ -624,6 +754,8 @@ argument_list|(
 name|aa
 argument_list|,
 name|bb
+argument_list|,
+name|mode
 argument_list|)
 expr_stmt|;
 comment|// a problem here is from flip or doIterate
@@ -968,6 +1100,8 @@ argument_list|(
 name|a_and
 argument_list|,
 name|b_and
+argument_list|,
+name|mode
 argument_list|)
 expr_stmt|;
 name|doIterate
@@ -975,6 +1109,8 @@ argument_list|(
 name|a_or
 argument_list|,
 name|b_or
+argument_list|,
+name|mode
 argument_list|)
 expr_stmt|;
 name|doIterate
@@ -982,6 +1118,8 @@ argument_list|(
 name|a_xor
 argument_list|,
 name|b_xor
+argument_list|,
+name|mode
 argument_list|)
 expr_stmt|;
 name|doIterate
@@ -989,6 +1127,8 @@ argument_list|(
 name|a_andn
 argument_list|,
 name|b_andn
+argument_list|,
+name|mode
 argument_list|)
 expr_stmt|;
 name|assertEquals
@@ -1136,6 +1276,17 @@ argument_list|(
 literal|1200
 argument_list|,
 literal|1000
+argument_list|,
+literal|1
+argument_list|)
+expr_stmt|;
+name|doRandomSets
+argument_list|(
+literal|1200
+argument_list|,
+literal|1000
+argument_list|,
+literal|2
 argument_list|)
 expr_stmt|;
 block|}
@@ -1146,7 +1297,8 @@ name|testBig
 parameter_list|()
 block|{
 comment|// uncomment to run a bigger test (~2 minutes).
-comment|// doRandomSets(2000,200000);
+comment|// doRandomSets(2000,200000, 1);
+comment|// doRandomSets(2000,200000, 2);
 block|}
 DECL|method|testEquals
 specifier|public
@@ -1313,6 +1465,152 @@ argument_list|()
 argument_list|)
 argument_list|)
 expr_stmt|;
+block|}
+DECL|method|testBitUtils
+specifier|public
+name|void
+name|testBitUtils
+parameter_list|()
+block|{
+name|long
+name|num
+init|=
+literal|100000
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|5
+argument_list|,
+name|BitUtil
+operator|.
+name|ntz
+argument_list|(
+name|num
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|5
+argument_list|,
+name|BitUtil
+operator|.
+name|ntz2
+argument_list|(
+name|num
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|5
+argument_list|,
+name|BitUtil
+operator|.
+name|ntz3
+argument_list|(
+name|num
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|num
+operator|=
+literal|10
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|BitUtil
+operator|.
+name|ntz
+argument_list|(
+name|num
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|BitUtil
+operator|.
+name|ntz2
+argument_list|(
+name|num
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|BitUtil
+operator|.
+name|ntz3
+argument_list|(
+name|num
+argument_list|)
+argument_list|)
+expr_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+literal|64
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|num
+operator|=
+literal|1L
+operator|<<
+name|i
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|i
+argument_list|,
+name|BitUtil
+operator|.
+name|ntz
+argument_list|(
+name|num
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|i
+argument_list|,
+name|BitUtil
+operator|.
+name|ntz2
+argument_list|(
+name|num
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|i
+argument_list|,
+name|BitUtil
+operator|.
+name|ntz3
+argument_list|(
+name|num
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 block|}
 end_class
